@@ -94,7 +94,7 @@ direct.label <- structure(function # Direct labels for color decoding
 
   ## direct labels for lineplots that do not overlap and do not go off
   ## the plot.
-  data(BodyWeight,package="nlme")
+  data("BodyWeight",package="nlme")
   library(lattice)
   oldopt <- lattice.options(panel.error=NULL)
   ratplot <-
