@@ -21,14 +21,14 @@ then we will calculate a new y value using linear interpolation.}
 
 
 \examples{
-data(mpg,package="ggplot2")
+data("mpg",package="ggplot2")
 library(lattice)
 scatter <- xyplot(jitter(cty)~jitter(hwy),mpg,groups=class,aspect=1)
 dlcompare(list(scatter),
           list("extreme.grid",
                `+dl.move`=list(extreme.grid,dl.move("suv",15,15))))
 
-data(svmtrain,package="directlabels")
+data("svmtrain",package="directlabels")
 library(ggplot2)
 p <- qplot(log10(gamma),rate,data=svmtrain,group=data,colour=data,
            geom="line",facets=replicate~nu)
